--- a/tablet.css
+++ b/tablet.css
@@ -69,6 +69,7 @@
     
   }
   .footer-part ul{
+    padding: 0 !important;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -78,5 +79,6 @@
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  
 }
 
